fixed most popular not showing when not signed in

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,6 @@
 .ui.red.buttons .button:focus {
   background-color: #b54800;
 }
+Menu.Item:hover {
+  transform: scale(1.5);
+}
